<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:id="@+id/btnTutorial"
            android:layout_margin="20dp"
            >

        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_exercises"
            android:id="@+id/btnSelectExercises"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_training_style"
            android:id="@+id/btnTrainingStyle"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_workout"
            android:id="@+id/btnWorkoutGen"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_graph"
            android:id="@+id/btnGraph"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:id="@+id/btnSignOut"
        android:layout_margin="30dp"
        />
</LinearLayout>