<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/exname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_is_wrong"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/exweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_is_wrong"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/exrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_is_wrong"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/exset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_is_wrong"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/skipbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/skip" />
            <Button
                android:id="@+id/failbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fail" />
            <Button
                android:id="@+id/completebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/complete" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>